[package]
name = "imat"
version = "0.1.0"
edition = "2024"
description = "Terminal image viewer (PNG/JPEG/TIFF) using ratatui"
license = "MIT"
repository = "https://github.com/keejkrej/imat-rs"
keywords = ["image", "terminal", "viewer", "tiff", "ratatui"]
categories = ["command-line-utilities", "multimedia::images"]

[features]
default = []
sam = ["dep:sam-rs"]

[dependencies]
anyhow = "1.0.102"
crossterm = "0.29.0"
image = "0.25.10"
ratatui = "0.30.0"
tiff = "0.11.3"
sam-rs = { git = "https://github.com/keejkrej/sam-rs", optional = true }
